# terrain_generator

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  ARENA.md  CMakeLists.txt  README.md  build.sh  run.sh
shaders/: CMakeLists.txt  basic.vert
src/: main.c  main.cpp
src/camera/: camera.h
src/core/: app.c  app.cpp  app.h  entity.h  log.cpp  log.h
src/foundation/: result.h
src/geometry/: mesh.c  mesh.cpp  mesh.h  quad.c  quad.cpp  quad.h  vertex.h
src/math/: math.h
src/memory/: arena.c  arena.cpp  arena.h  memory.c  memory.cpp  memory.h
src/platform/: input.c  input.cpp  input.h  window.c  window.cpp  window.h
src/renderer/: renderer.c  renderer.h  renderer_frame.cpp  renderer_init.c  renderer_init.cpp  renderer_internal.h  renderer_swapchain.c  renderer_swapchain.cpp  vk_buffer.cpp  vk_buffer.h  vk_command.cpp  vk_command.h  vk_device.c  vk_device.cpp  vk_device.h  vk_instance.c  vk_instance.cpp  vk_instance.h  vk_pipeline.c  vk_pipeline.cpp  vk_pipeline.h  vk_renderpass.cpp  vk_renderpass.h  vk_shader.c  vk_shader.cpp  vk_shader.h  vk_swapchain.c  vk_swapchain.cpp  vk_swapchain.h  vk_sync.cpp  vk_sync.h
src/simulation/: compute.cpp  compute.h  corrosion.cpp  corrosion.h  simulation.c  simulation.cpp  simulation.h
src/utils/: file_io.cpp  file_io.h  macros.h  types.h
tmp/: 99-4578  99-4578-prompt
